# PixelDiT-diffusers

./: LICENSE  README.md  SECURITY.md  environment.yaml  pyproject.toml  requirements.txt
c2i/: README.md  main.py  train_c2i.sh
c2i/configs/: pix256_xl.yaml  pix512_xl.yaml
c2i/src/: data.py  diffusion.py  lightning.py  utils.py
pixdit_core/: pixeldit_t2i.py
scripts/: convert_diffusers_to_pixeldit.py  convert_pixeldit_t2i_to_diffusers.py  convert_pixeldit_to_diffusers.py  sample_pixeldit.py
src/: __init__.py
src/diffusers/: __init__.py
src/diffusers/models/: __init__.py
src/diffusers/models/transformers/: __init__.py  transformer_pixeldit.py  transformer_pixeldit_t2i.py
src/diffusers/pipelines/: __init__.py
src/diffusers/pipelines/pixeldit/: __init__.py  pipeline_pixeldit.py  pipeline_pixeldit_t2i.py
t2i/: README.md  inference.py  prompts.txt  train.py  train.sh
t2i/configs/: PixelDiT_1024px_pixel_diffusion_stage3.yaml  PixelDiT_512px_pixel_diffusion_stage1.yaml  PixelDiT_512px_pixel_diffusion_stage2.yaml
t2i/diffusion/: __init__.py
t2i/diffusion/data/: builder.py
t2i/diffusion/data/datasets/: __init__.py  pixdit_datasets.py  utils.py
t2i/diffusion/data/wids/: wids.py  wids_dl.py  wids_mmtar.py  wids_tar.py
t2i/diffusion/model/: builder.py  diffusion_utils.py  dpm_solver.py  flow_dpm.py  gaussian_diffusion.py  iddpm.py  respace.py  trainer.py  utils.py
t2i/diffusion/utils/: checkpoint.py  config.py  dist_utils.py  logger.py  misc.py  optimizer.py
tools/: compute_flops.py  download.py
