[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusers-pixeldit"
version = "0.1.0"
description = "Diffusers-style PixelDiT components."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "diffusers>=0.30.1",
    "torch",
    "safetensors",
]

[tool.setuptools.packages.find]
where = ["src"]
